# nouns

./: .gitignore  Makefile  README.md  mypy.ini  pyproject.toml
data/processed/: abstract_out.txt  concrete_out.txt  non_place.txt  place.txt
data/training/: abstract_src.txt  concrete_src.txt  non_place_src.txt  place_src.txt
nouns/: main.py  processing.py  settings.py  three_nouns.py  word_io.py
tests/: test_processing.py
